<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:padding="@dimen/half_dynamic_spacing"
  tools:context=".controller.GameFragment">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline"
    android:layout_height="match_parent"
    android:layout_width="0dp"

    android:orientation="vertical"


    app:layout_constraintGuide_percent="0.75"/>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/level_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:hintEnabled="true"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintVertical_chainStyle="packed"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/playing_field"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@id/rows_removed_layout">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/level"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/current_level"
      android:background="@null"
      android:inputType="none"
      android:focusable="false"
      tools:text="5"/>


  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/rows_removed_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:hintEnabled="true"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintTop_toTopOf="@id/level_layout"
    app:layout_constraintBottom_toBottomOf="@id/level_layout"
    app:layout_constraintRight_toLeftOf="@id/score_layout"
    app:layout_constraintLeft_toRightOf="@id/level_layout">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/rows_removed"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@null"
      android:inputType="none"
      android:hint="@string/current_rows_removed"
      android:editable="false"
      android:focusable="false"

      android:text="30"/>
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/score_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:hintEnabled="true"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintTop_toTopOf="@id/level_layout"
    app:layout_constraintBottom_toBottomOf="@id/level_layout"
    app:layout_constraintLeft_toRightOf="@id/rows_removed_layout"
    app:layout_constraintRight_toLeftOf="@id/guideline">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="@id/level_layout"
      android:hint="@string/score"
      android:background="@null"
      android:editable="false"
      android:focusable="false"
      tools:text="10000"/>
  </com.google.android.material.textfield.TextInputLayout>

  <edu.cnm.deepdive.tetris.view.PlayingFieldView
    android:id="@+id/playing_field"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:stretchMode="columnWidth"
    android:verticalSpacing="2dp"
    android:horizontalSpacing="2dp"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintWidth_percent="0.75"
    app:layout_constraintBottom_toTopOf="@id/drop"
    app:layout_constraintRight_toRightOf="@id/guideline"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/level_layout"
    tools:listitem="@layout/item_playing_field"/>
  <LinearLayout
    android:id="@+id/game_over_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/half_dynamic_spacing"
    android:orientation="vertical"
    android:gravity="center"
    android:visibility="gone"
    android:background="@color/design_default_color_background"
    android:elevation="24dp"
    app:layout_constraintTop_toTopOf="@id/playing_field"
    app:layout_constraintStart_toStartOf="@id/playing_field"
    app:layout_constraintEnd_toStartOf="@id/guideline"
    app:layout_constraintBottom_toTopOf="@id/drop">

    <TextView
      android:id="@+id/game_over"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/game_over"
      app:layout_constraintVertical_chainStyle="packed"
      style="@style/TextAppearance.Material3.HeadlineLarge"
      android:visibility="gone"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:layout_constraintStart_toStartOf="@id/playing_field"
      app:layout_constraintEnd_toEndOf="@id/playing_field"
      app:layout_constraintTop_toTopOf="@id/playing_field"
      app:layout_constraintBottom_toTopOf="@id/final_score"/>



  <TextView
    android:id="@+id/final_score"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/final_score_format"
    android:visibility="gone"
    android:layout_margin="@dimen/half_dynamic_spacing"
    style="@style/TextAppearance.Material3.HeadlineMedium"
    app:layout_constraintTop_toBottomOf="@id/game_over"
    app:layout_constraintStart_toStartOf="@id/game_over"
    app:layout_constraintEnd_toEndOf="@id/game_over"
    app:layout_constraintBottom_toTopOf="@id/show_scores"/>


  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/show_scores"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/high_scores"
    android:tooltipText="@string/high_scores"
    app:layout_constraintTop_toBottomOf="@id/final_score"
    app:layout_constraintStart_toStartOf="@id/final_score"
    app:layout_constraintEnd_toEndOf="@id/final_score"
    app:layout_constraintBottom_toBottomOf="@id/playing_field"

    />

  </LinearLayout>
  <ImageButton
    android:id="@+id/move_left"
    android:layout_width="@dimen/button_size"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/move_left"
    android:tooltipText="@string/move_left"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="@id/playing_field"
    app:layout_constraintRight_toLeftOf="@id/rotate_left"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    tools:ignore="ContentDescription"/>
  <ImageButton
    android:id="@+id/rotate_left"
    android:layout_width="@dimen/button_size"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/rotate_left"
    android:tooltipText="Rotate Left"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/move_left"
    app:layout_constraintRight_toLeftOf="@id/drop"
    tools:ignore="ContentDescription"/>
  <ImageButton
    android:id="@+id/drop"
    android:layout_width="@dimen/button_size"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/drop"
    android:tooltipText="Drop"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/rotate_left"
    app:layout_constraintRight_toLeftOf="@id/rotate_right"
    tools:ignore="ContentDescription"/>
  <ImageButton
    android:id="@+id/rotate_right"
    android:layout_width="@dimen/button_size"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/rotate_right"
    android:tooltipText="Move Right"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/drop"
    app:layout_constraintRight_toLeftOf="@id/move_right"
    tools:ignore="ContentDescription"/>

  <ImageButton
    android:id="@+id/move_right"
    android:layout_width="@dimen/button_size"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/move_right"
    android:tooltipText="Rotate Right"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="@id/playing_field"
    app:layout_constraintLeft_toRightOf="@id/rotate_right"
    tools:ignore="ContentDescription"/>

  <ListView
    android:id="@+id/next_queue"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintTop_toTopOf="@id/playing_field"
    app:layout_constraintLeft_toRightOf="@id/playing_field"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@id/run"
    tools:listitem="@layout/item_next_queue"/>
  <Button
    android:id="@+id/run"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:text="Run"
    app:layout_constraintLeft_toLeftOf="@id/guideline"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@id/stop"/>

  <Button
    android:id="@+id/stop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:text="Stop"
    app:layout_constraintLeft_toLeftOf="@id/guideline"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>